--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,16 @@
-Flask==3.0.0
-waitress==2.1.2
-yt-dlp==2025.01.08
+# متطلبات البايثون لتشغيل مشروعك
+
+# مكتبة yt-dlp لمعالجة الفيديوهات
+yt-dlp==2025.07.07
+
+# مكتبات ويب أساسية
+fastapi==0.112.1
+uvicorn==0.30.6
+
+# للتعامل مع الطلبات الخارجية
+requests==2.32.3
+
+# لو عندك عمليات async
+aiohttp==3.10.5
+
+# أي مكتبات إضافية تحتاجها ضعها هنا
